// protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=. --ts_proto_opt=fileSuffix=.pb ./src/boilerplate/proto/boilerplate.proto
syntax = "proto3";

package boilerplate;

service BoilerplateService {
  rpc CreateBook (CreateBookRequest) returns (Response) {}
  rpc BookList (BookListRequest) returns (BookListResponse) {}
}

message CreateBookRequest {
  string Name = 1;
  string Description = 2;
  float Price = 3;
  string Author = 4;
  string Publisher = 5;
}

message BookListRequest {
  BookListRequestFilter Filter = 1;
}

message BookListRequestFilter {
  string Name = 1;
}

message BookListResponse {
  ErrorData Error = 1;
  repeated Book Data = 2;
}

message Book {
  int64 ID = 1;
  string Name = 2;
  string Description = 3;
  float Price = 4;
  string Author = 5;
  string Publisher = 6;
  string CreatedAt = 7;
  int64 CreatedBy = 8;
  string UpdatedAt = 9;
  int64 UpdatedBy = 10;
}

message Response {
  ErrorData Error = 1;
  int64 CreatedID = 2;
}

message ErrorData {
  int32 Status = 1;
  string Message = 2;
}